--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,5 @@ jobs:
                 # os: [ubuntu-latest, macos-latest, windows-latest]
                 os: [ubuntu-latest]
         uses: ./.github/workflows/build.yml
+        with:
+            os: ${{ matrix.os }}
