--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
             # Install system dependencies for Screenpipe and Tauri
             # - if: matrix.os == 'ubuntu-latest'
             - run: |
-                  DEBIAN_FRONTEND=noninteractive apt install -y libwebkit2gtk-4.1-dev \
+                  DEBIAN_FRONTEND=noninteractive sudo apt install -y libwebkit2gtk-4.1-dev \
                   build-essential curl wget file libxdo-dev libssl-dev libayatana-appindicator3-dev \
                   librsvg2-dev g++ ffmpeg tesseract-ocr cmake pkg-config libavformat-dev libavfilter-dev libavdevice-dev \ 
                   libavcodec-dev libavutil-dev libswscale-dev libssl-dev libtesseract-dev libxdo-dev libsdl2-dev libclang-dev \
