--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
             - run: bun install --frozen-lockfile
               shell: bash
             # Build and upload the Tauri app to the artifacts
-            - run: bun tauri build && ls src-tauri/target/tauri/release/bundle/appimage
+            - run: bun tauri build --verbose && pwd
               shell: bash
             # - uses: actions/upload-artifact@v4
             #   with:
