--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -7,10 +7,10 @@ on:
       branches: [main, master]
   workflow_call:
     outputs:
-        deb-url:
-          value: ${{ jobs.build.outputs.deb-url }}
-        app-image-url:
-          value: ${{ jobs.build.outputs.app-image-url }}
+        deb-name:
+          value: ${{ jobs.build.outputs.deb-name }}
+        app-image-name:
+          value: ${{ jobs.build.outputs.app-image-name }}
 jobs:
   build:
       strategy:
